--- a/datax-admin/pom.xml
+++ b/datax-admin/pom.xml
@@ -805,6 +805,18 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.6.3</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.4.0</version>
@@ -835,6 +847,7 @@
                     <outputDirectory>${project.parent.basedir}/packages</outputDirectory>
                 </configuration>
             </plugin>
+
         </plugins>
 
     </build>
