--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>datax-executor</module>
         <module>datax-rpc</module>
         <module>datax-assembly</module>
+        <module>datax-admin-http</module>
+        <module>datax-admin-http-sample</module>
     </modules>
 
     <properties>
@@ -48,12 +50,11 @@
         <hessian.version>4.0.63</hessian.version>
         <hadoop.version>2.7.3</hadoop.version>
         <hive.jdbc.version>2.1.0</hive.jdbc.version>
-
         <hbase.version>1.3.0</hbase.version>
         <mongo-java-driver.version>3.4.2</mongo-java-driver.version>
         <oshi.core.version>3.5.0</oshi.core.version>
-
         <phoenix.version>5.0.0-HBase-2.0</phoenix.version>
     </properties>
+
 
 </project>
