--- a/datax-admin-http-sample/src/main/resources/application.yml
+++ b/datax-admin-http-sample/src/main/resources/application.yml
@@ -6,7 +6,7 @@ datax:
   job:
     admin:
       ### datax admin address list, such as "http://address" or "http://address01,http://address02"
-      addresses: http://127.0.0.1:8080/
+#      addresses: http://127.0.0.1:8080/
       address: http://127.0.0.1:8080/
       username: admin
       password: 123456
