--- a/datax-admin-http/pom.xml
+++ b/datax-admin-http/pom.xml
@@ -44,6 +44,12 @@
             <artifactId>hutool-all</artifactId>
             <version>5.7.22</version>
         </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-extension</artifactId>
+            <version>3.3.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
