--- a/datax-admin-http-sample/pom.xml
+++ b/datax-admin-http-sample/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>datax-web</artifactId>
         <groupId>com.wugui</groupId>
-        <version>2.1.2</version>
+        <version>2.1.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>com.wugui</groupId>
             <artifactId>datax-admin-http</artifactId>
-            <version>2.1.2</version>
+            <version>2.1.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
