--- a/datax-core/pom.xml
+++ b/datax-core/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.wugui</groupId>
         <artifactId>datax-web</artifactId>
-        <version>2.1.2</version>
+        <version>2.1.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>datax-core</artifactId>
