--- a/datax-executor/src/main/bin/env.properties
+++ b/datax-executor/src/main/bin/env.properties
@@ -16,16 +16,16 @@ EXECUTOR_PORT=9999
 
 
 ## 保持和datax-admin端口一致
-DATAX_ADMIN_PORT=
+DATAX_ADMIN_PORT=9201
 
 ## PYTHON脚本执行位置
 #PYTHON_PATH=/home/hadoop/install/datax/bin/datax.py
-PYTHON_PATH=
+PYTHON_PATH=/app/datax/bin/datax.py
 
 
 
 ## dataxweb 服务端口
-SERVER_PORT=9504
+SERVER_PORT=9201
 
 #PID_FILE_PATH=${BIN}/service.pid
 
