--- a/datax-admin/pom.xml
+++ b/datax-admin/pom.xml
@@ -793,18 +793,35 @@
     <build>
         <plugins>
             <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <!-- 指明编译源代码时使用的字符编码，maven编译的时候默认使用的GBK编码，通过encoding属性设置字符编码，告诉maven这个项目使用UTF-8来编译 -->
+                    <encoding>utf8</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.4</version>
                 <configuration>
-                    <excludes>
-                        <exclude>**/*.yml</exclude>
-                        <exclude>**/*.properties</exclude>
-                        <exclude>**/*.sh</exclude>
-                        <exclude>**/*.xml</exclude>
-                    </excludes>
-
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>com.wugui.datax.admin.DataXAdminApplication</mainClass> <!-- 此处为主入口-->
+                        </manifest>
+                    </archive>
                 </configuration>
+<!--                <configuration>-->
+<!--                    <excludes>-->
+<!--                        <exclude>**/*.yml</exclude>-->
+<!--                        <exclude>**/*.properties</exclude>-->
+<!--                        <exclude>**/*.sh</exclude>-->
+<!--                        <exclude>**/*.xml</exclude>-->
+<!--                    </excludes>-->
+
+<!--                </configuration>-->
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -851,7 +868,15 @@
             </plugin>
 
         </plugins>
-
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <!--包含文件夹以及子文件夹下所有资源-->
+                <includes>
+                    <include>**/*.*</include>
+                </includes>
+            </resource>
+        </resources>
     </build>
 
 
