--- a/datax-admin/src/main/resources/application-dev.yml
+++ b/datax-admin/src/main/resources/application-dev.yml
@@ -1,15 +1,11 @@
 server:
-  port: 8080
-#  port: ${server.port}
+  port: 9201
 spring:
   #数据源
   datasource:
+    password: Dataops@2021
     username: root
-    password: aizazadi
-    url: jdbc:mysql://localhost:3306/datax?serverTimezone=Asia/Shanghai&useLegacyDatetimeCode=false&useSSL=false&nullNamePatternMatchesAll=true&useUnicode=true&characterEncoding=UTF-8
-#    password: ${DB_PASSWORD:password}
-#    username: ${DB_USERNAME:username}
-#    url: jdbc:mysql://${DB_HOST:127.0.0.1}:${DB_PORT:3306}/${DB_DATABASE:dataxweb}?serverTimezone=Asia/Shanghai&useLegacyDatetimeCode=false&useSSL=false&nullNamePatternMatchesAll=true&useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:mysql://172.16.35.57:3306/datax-web?serverTimezone=Asia/Shanghai&useLegacyDatetimeCode=false&useSSL=false&nullNamePatternMatchesAll=true&useUnicode=true&characterEncoding=UTF-8
     driver-class-name: com.mysql.jdbc.Driver
 
 
@@ -30,10 +26,8 @@ spring:
   mail:
     host: smtp.qq.com
     port: 25
-    username: rokkki@qq.com
-    password: PROMXAGTFIVOGYQB
-#    username: ${mail.username}
-#    password: ${mail.password}
+    username: xxx@qq.com
+    password: xxx
     properties:
       mail:
         smtp:
@@ -83,19 +77,14 @@ mybatis-plus:
 
 # 配置mybatis-plus打印sql日志
 logging:
-  #level:
-  #  com.wugui.datax.admin.mapper: info
-#path: ./data/applogs/admin
   level:
     com.wugui.datax.admin.mapper: error
-    path: ${data.path}/applogs/admin
-
-
+  path: /app/datax-web/dev/logs/applogs/admin
 
 #datax-job, access token
 datax:
   job:
-    accessToken:
+    accessToken: qwertyuiop
     #i18n (default empty as chinese, "en" as english)
     i18n:
     ## triggerpool max size
