--- a/datax-admin/pom.xml
+++ b/datax-admin/pom.xml
@@ -11,6 +11,7 @@
     <packaging>jar</packaging>
     <properties>
         <java.version>1.8</java.version>
+        <kingbase.version>8.6.0</kingbase.version>
     </properties>
 
     <dependencyManagement>
@@ -788,8 +789,33 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.kingbase8</groupId>
+            <artifactId>kingbase8</artifactId>
+            <version>${kingbase.version}</version>
+        </dependency>
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>kingbasev8r3</id>
+            <properties>
+                <kingbase.version>8.2.0</kingbase.version>
+            </properties>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>kingbasev8r6</id>
+            <properties>
+                <kingbase.version>8.6.0</kingbase.version>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+    </profiles>
     <build>
         <plugins>
             <plugin>
