--- a/datax-admin/src/main/resources/application-aqdn.yml
+++ b/datax-admin/src/main/resources/application-aqdn.yml
@@ -3,10 +3,10 @@ server:
 spring:
   #数据源
   datasource:
-    username: aqdn
-    password: yyyf@2019
-    url: jdbc:mysql://192.168.181.237:43306/datax_web?serverTimezone=Asia/Shanghai&useLegacyDatetimeCode=false&useSSL=false&nullNamePatternMatchesAll=true&useUnicode=true&characterEncoding=UTF-8
-    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:kingbase8://172.16.21.25:34521/test?currentSchema=datax_web&clientEncoding=UTF8
+    username: system
+    password: KbsV8R6$Ubd
+    driver-class-name: com.kingbase8.Driver
 
 
     hikari:
@@ -79,7 +79,7 @@ mybatis-plus:
 logging:
   level:
     com.wugui.datax.admin.mapper: error
-  path: /data/app/datax-web/logs/applogs/admin
+  path: /Users/ada/Documents/work/logs/applogs/admin
 
 #datax-job, access token
 datax:
